--- a/index.html
+++ b/index.html
@@ -51,11 +51,7 @@
                         <div class="col-sm-12">
                             <h2>We're Coming Soon</h2>
                             <p>This website is under construction for any queries plz contact us.</p>
-                            <div class="timer">
-                                <div class="days-wrapper">
-                                    <img src="assets/img/image.jpeg" style="height: 100%;" />
-                                </div>
-                            </div>
+                            <p>Tel: <a href="tel:9811007671">98110 07671</a> | <a href="tel:9911007671">99110 07671</a> | Email: <a href="mailto:manubir.mirage@gmail.com">manubir.mirage@gmail.com</a></p>
                         </div>
                     </div>
                 </div>
